--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form class="form" action="#">
       <label class= "label__form" for="number">Introduce aquí tu número:</label>
     <input class="form__input js-input" type="number" value="" id="number"> 
-    <input class="form__button js-button" type="button" value="Prueba">
+    <input class="form__button js-button" type="button" value="Prueba" id="buttonClick">
   </form>
 
     <section class="section">
