add prevent default

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 class="title js-h1"> Adivina el número </h1>
     </header>
     <main>
-    <form class="form" action="#">
+    <form class="form js-form" action="#">
       <label class= "label__form" for="number">Introduce aquí tu número:</label>
     <input class="form__input js-input" type="number" value="" id="number"> 
     <input class="form__button js-button" type="button" value="Prueba" id="buttonClick">
